Fixed: Disable horizontal overflow when start board in firefox/iceweasel 3;

--- a/css/Main.css
+++ b/css/Main.css
@@ -26,6 +26,7 @@ p, a, h1, h2, h3, h4, h5, h6, span, strong{
 	height			: 150mm;
 	*/
 
-	margin-left		: 215px;
+	margin-left		: 15px;
 	height			: 550px;
+	overflow		: hidden;
 }
